# os_template

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml  x86_64-custom_os.json
.cargo/: config.toml
src/: main.rs
